# kdeexamples

kdeui/kmessagewidgetdemo/: CMakeLists.txt  main.cpp  window.cpp  window.h
